src/test/ui/e0119/issue-27403.stderr
error[E0119]: conflicting implementations of trait `std::convert::Into<_>` for type `GenX<_>`:
  --> $DIR/issue-27403.rs:5:1
   |
LL | impl<S> Into<S> for GenX<S> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T, U> std::convert::Into<U> for T
             where U: std::convert::From<T>;

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
